# spotloader

./: .gitignore  README.md  get_songs.py  main.py  pyproject.toml  requirements.txt
static/: index.html
static/css/: style.css
static/js/: index.js  utils.js
