[tool.poetry]
name = "spotloader"
version = "0.1.0"
description = "Download Spotify playlists."
authors = ["Liam Ilan <snowboardsheep@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.1"
spotipy = "^2.19.0"
python-dotenv = "^0.20.0"
spotify-dl = "^8.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
